--- a/src/Components/PlayVideo/PlayVideo.css
+++ b/src/Components/PlayVideo/PlayVideo.css
@@ -137,3 +137,22 @@
     margin-right: 20px;
     color: #5a5a5a;
 }
+
+.subscribe-btn {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.subscribe-btn.subscribe {
+  background-color: rgb(169, 10, 10);
+  color: white;
+}
+
+.subscribe-btn.unsubscribe {
+  background-color: gray;
+  color: white;
+}
