--- a/src/Components/PlayVideo/PlayVideo.css
+++ b/src/Components/PlayVideo/PlayVideo.css
@@ -156,3 +156,21 @@
   background-color: gray;
   color: white;
 }
+
+@media (max-width: 900px) {
+    .play-video{
+        flex-basis: 100%;
+    }
+    .play-video iframe {
+        width: 100%;
+        height: 50vw;
+    }
+    .vid-description{
+        padding-left: 0;
+    }
+    .play-video .play-video-info span {
+        margin-left: 0;
+        margin-right: 15px;
+        margin-top: 15px;
+    }
+}
