--- a/src/Components/Recommended/Recommended.css
+++ b/src/Components/Recommended/Recommended.css
@@ -1,5 +1,8 @@
 .recommended {
     flex-basis: 30%;
+    background: var(--bg-color);
+    color: var(--text-color);
+    transition: background 0.3s, color 0.3s;
 }
 
 .side-video-list {
@@ -11,6 +14,7 @@
 .side-video-list img {
     flex-basis: 49%;
     width: 50%;
+    border-radius: 4px;
 }
 
 .vid-info {
@@ -21,12 +25,13 @@
 .vid-info h4 {
     font-size: 13px;
     margin-bottom: 5px;
+    color: var(--text-color);
 }
 
 .vid-info p {
     font-size: 12px;
     margin-bottom: 5px;
-    color: rgb(151, 151, 151);
+    color: var(--secondary-text-color);
 }
 
 @media (max-width: 900px) {
