--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,11 +1,13 @@
 .sidebar {
-    background: #fff;
+    background: var(--bg-color);
+    color: var(--text-color);
     width: 15%;
     height: 100vh;
     position: fixed;
     top: 0;
     padding-left: 2%;
     padding-top: 80px;
+    transition: background 0.3s, color 0.3s;
 }
 
 .shortcut-links img {
@@ -13,26 +15,27 @@
     margin-right: 20px;
 }
 
-.side-link{
+.side-link {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
     width: fit-content;
     flex-wrap: wrap;
     cursor: pointer;
+    color: var(--text-color);
 }
 
 .sidebar hr {
     border: 0;
     height: 1px;
-    background-color: #ccc;
+    background-color: var(--border-color);
     width: 85%;
 }
 
 .subscribed-list h3 {
     font-size: 13px;
     margin: 20px 0;
-    color: #5a5a5a;
+    color: var(--secondary-text-color);
 }
 
 .subscribed-list img {
@@ -45,7 +48,7 @@
     width: 5%;
 }
 
-.small-sidebar p{
+.small-sidebar p {
     display: none;
 }
 
@@ -63,7 +66,7 @@
     border-bottom: 3px solid red;
 }
 
-@media(max-width: 900px) {
+@media (max-width: 900px) {
     .sidebar {
         display: none;
     }
