--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,9 +1,11 @@
 .container {
-    background: #f9f9f9;
+    background: var(--bg-color);
+    color: var(--text-color);
     padding-left: 17%;
     padding-right: 2%;
     padding-top: 20px;
     padding-bottom: 20px;
+    transition: background 0.3s, color 0.3s;
 }
 
 .large-container {
