--- a/src/Pages/Video/Video.css
+++ b/src/Pages/Video/Video.css
@@ -1,5 +1,6 @@
 .play-container {
-    background: #f9f9f9;
+    background: var(--bg-color);
+    color: var(--text-color);
     padding-left: 2%;
     padding-right: 2%;
     padding-top: 20px;
@@ -7,10 +8,11 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    transition: background 0.3s, color 0.3s;
 }
 
 @media (max-width: 900px) {
-    .play-container{
+    .play-container {
         padding-left: 5%;
         padding-right: 5%;
     }
